# idxc

./: .gitignore  CMakeLists.txt
include/: idx_error_cpp.h  idx_memory_c.h
src/: idx.cpp  idx_memory_c.c
tests/: CMakeLists.txt
tests/src/: test_idx_cpp.cpp
